src/log/build_2025-06-01_21-14-33/Potential_field/stdout_stderr.log
/home/neo/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
running egg_info
creating ../build/Potential_field/Potential_field.egg-info
writing ../build/Potential_field/Potential_field.egg-info/PKG-INFO
writing dependency_links to ../build/Potential_field/Potential_field.egg-info/dependency_links.txt
writing entry points to ../build/Potential_field/Potential_field.egg-info/entry_points.txt
writing requirements to ../build/Potential_field/Potential_field.egg-info/requires.txt
writing top-level names to ../build/Potential_field/Potential_field.egg-info/top_level.txt
writing manifest file '../build/Potential_field/Potential_field.egg-info/SOURCES.txt'
reading manifest file '../build/Potential_field/Potential_field.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../build/Potential_field/Potential_field.egg-info/SOURCES.txt'
running build
running build_py
creating /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/Reguluator.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/__init__.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/Markov_solutions.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/Traectory.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/Instantaneous_center.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/A_star.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
copying Potential_field/Kinimatica.py -> /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field
running install
running install_lib
creating /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/Reguluator.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/__init__.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/Markov_solutions.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/Traectory.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/Instantaneous_center.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/A_star.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
copying /home/neo/Documents/ros2_ws/src/build/Potential_field/build/lib/Potential_field/Kinimatica.py -> /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Reguluator.py to Reguluator.cpython-310.pyc
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Markov_solutions.py to Markov_solutions.cpython-310.pyc
  File "/home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Markov_solutions.py", line 39
    int((pose.pose.position.y - self.origin[1]) / self.resolution)]
                                                                  ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 38

byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Traectory.py to Traectory.cpython-310.pyc
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Instantaneous_center.py to Instantaneous_center.cpython-310.pyc
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/A_star.py to A_star.cpython-310.pyc
byte-compiling /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field/Kinimatica.py to Kinimatica.cpython-310.pyc
running install_data
creating /home/neo/Documents/ros2_ws/src/install/Potential_field/share/ament_index/resource_index/packages
copying resource/Potential_field -> /home/neo/Documents/ros2_ws/src/install/Potential_field/share/ament_index/resource_index/packages
copying package.xml -> /home/neo/Documents/ros2_ws/src/install/Potential_field/share/Potential_field
running install_egg_info
Copying ../build/Potential_field/Potential_field.egg-info to /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/python3.10/site-packages/Potential_field-0.0.0-py3.10.egg-info
running install_scripts
Installing Reguluator script to /home/neo/Documents/ros2_ws/src/install/Potential_field/lib/Potential_field
writing list of installed files to '/home/neo/Documents/ros2_ws/src/build/Potential_field/install.log'
